--- a/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut-landscaping.Rmd
+++ b/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut-landscaping.Rmd
@@ -464,6 +464,83 @@ ls2_phen_dists_data$env_type_label <- mapply(
 )
 ```
 
+Load 2-step task toggle count distribution data
+
+```{r}
+ls2_task_toggle_data_loc <- paste0(working_directory, "data/mutant_task_toggle_distribution_step-1.csv")
+ls2_task_toggle_data <- read.csv(ls2_task_toggle_data_loc, na.strings="NONE")
+
+ls2_task_toggle_data$COPY_MUT_PROB <- as.factor(
+  ls2_task_toggle_data$COPY_MUT_PROB
+)
+ls2_task_toggle_data$env_chg_rate <- as.factor(
+  ls2_task_toggle_data$env_chg_rate
+)
+ls2_task_toggle_data$env_condition <- as.factor(
+  ls2_task_toggle_data$env_condition
+)
+ls2_task_toggle_data$env_type <- as.factor(
+  ls2_task_toggle_data$env_type
+)
+ls2_task_toggle_data$num_tasks_toggled <- factor(
+  ls2_task_toggle_data$num_tasks_toggled,
+  levels=c(
+    -1,
+    0,
+    1,
+    2,
+    3,
+    4,
+    5,
+    6
+  )
+)
+
+# Hacky/inefficient way to assign rep_ids based on replicate_id ordering
+ls2_task_toggle_simplify_replicate_id <- function(e, m, rep_id) {
+  treatment_data <- filter(
+    ls2_task_toggle_data,
+    (env_condition==e) & (COPY_MUT_PROB==m)
+  )
+  rep_ids <- as.integer(levels(factor(treatment_data$RANDOM_SEED)))
+  rep_id_map <- as.data.frame(rep_ids)
+  rep_id_map$order <- order(rep_id_map$rep_ids)
+  return(filter(rep_id_map, rep_ids==rep_id)$order)
+}
+ls2_task_toggle_data$rep_id <- mapply(
+  ls1_task_toggle_simplify_replicate_id,
+  ls2_task_toggle_data$env_condition,
+  ls2_task_toggle_data$COPY_MUT_PROB,
+  ls2_task_toggle_data$RANDOM_SEED
+)
+ls2_task_toggle_data$rep_id <- as.factor(
+  ls2_task_toggle_data$rep_id
+)
+
+ls2_task_toggle_data$RANDOM_SEED <- as.factor(
+  ls2_task_toggle_data$RANDOM_SEED
+)
+
+ls2_task_toggle_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  ls2_task_toggle_data$env_chg_rate,
+  ls2_task_toggle_data$env_type
+)
+ls2_task_toggle_data$env_chg_rate_label <- factor(
+  ls2_task_toggle_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+ls2_task_toggle_data$env_type_label <- mapply(
+  get_env_type_label,
+  ls2_task_toggle_data$env_type
+)
+```
 
 Load run summary data
 
@@ -963,6 +1040,52 @@ ggsave(
 ```
 
 ### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_run_summary_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viable_mutants_flip_env,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+
+ggsave(
+  paste0(working_directory, "plots/", "num_viable_mutants_flip_env_step-2.pdf")
+)
+```
 
 ## avg_match_chg_toward_env_b
 
@@ -2396,6 +2519,95 @@ ggplot(
   )
 ```
 
+### 2-step mutants
+
+```{r}
+ggplot(
+    ls2_task_toggle_data,
+    # filter(ls1_task_toggle_data, COPY_MUT_PROB==0.001 & env_condition%in%focal_envs),
+    aes(
+      x=rep_id,
+      y=num_mutants,
+      fill=num_tasks_toggled
+    )
+  ) +
+  geom_bar(position="stack", stat="identity") +
+  # scale_fill_viridis(discrete=TRUE, direction=-1) +
+  scale_fill_manual(
+    name="Distance to ENV-A",
+    values=c("#000000", viridis(n=7, alpha=1, direction=-1))
+  ) +
+  facet_grid(
+    env_condition~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="bottom",
+    axis.text.x=element_text(size=10)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "num_tasks_toggled_dist_step-2.pdf"),
+  width=15,
+  height=18
+)
+```
+
+```{r}
+ggplot(
+    filter(
+      ls2_task_toggle_data,
+      (num_tasks_toggled==0)
+    ),
+    aes(
+      x=env_chg_rate_label,
+      y=prop_of_viable,
+      # y=num_mutants,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  geom_hline(
+    yintercept=0,
+    linetype="dashed",
+    size=0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=pseudo_log_trans(sigma=1,base=10),
+  #   breaks=c(0, 10, 100, 1000, 10000, 100000)
+  # ) +
+  facet_grid(
+    COPY_MUT_PROB~env_type_label,
+    # env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+```
+
 ## Manuscript (draft) Figures
 
 ### Environmental change influences mutational landscape
@@ -2555,37 +2767,32 @@ ggsave(
 fig_num_mutants_that_flip <-
   ggplot(
     filter(
-      ls2_phen_dists_data,
-      ((distance==0) & env_chg_rate_label!="none-b" & dom_match_score_env_a==6) |
-      (distance==6 & env_chg_rate_label=="none-b" & dom_match_score_env_a==0)
+      ls2_run_summary_data,
+      COPY_MUT_PROB==focal_mut_rate & env_condition%in%focal_envs
     ),
     aes(
-      x=env_chg_rate_label,
-      y=count_env_b,
+      x=env_type,
+      y=num_viable_mutants_flip_env,
       fill=env_condition
     )
   ) +
-  # geom_flat_violin(
-  #   position = position_nudge(x = .2, y = 0),
-  #   alpha = .8,
-  #   adjust=1.5
-  # ) +
+  geom_flat_violin(
+    scale="area",
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
   geom_point(
     mapping=aes(color=env_condition),
     position = position_jitter(width = .15),
-    size = .5,
+    size = 1,
     alpha = 0.8
   ) +
-  # geom_boxplot(
-  #   width = .1,
-  #   outlier.shape = NA,
-  #   alpha = 0.5
-  # ) +
-  # geom_hline(
-  #   yintercept=0,
-  #   linetype="dashed",
-  #   size=0.5
-  # ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
   scale_fill_brewer(
     palette=cb_palette
   ) +
@@ -2593,25 +2800,39 @@ fig_num_mutants_that_flip <-
     palette=cb_palette
   ) +
   scale_y_continuous(
+    name="Mutants adapted to\nalternate environment (log scale)",
+    # trans=log10_trans()
     trans=pseudo_log_trans(sigma=1,base=10),
-    breaks=c(0, 10, 100, 1000, 10000, 100000)
+    breaks=c(0, 10, 100, 1000, 10000, 100000, 1000000)
   ) +
-  facet_grid(
-    COPY_MUT_PROB~env_type_label,
-    scales="free_x"
+  scale_x_discrete(
+    name="Environment",
+    breaks=env_breaks,
+    limits=env_breaks,
+    labels=env_labels
   ) +
   theme(
     legend.position="none",
-    axis.text=element_text(size=14),
-    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+    axis.text=element_text(size=14)
   )
 fig_num_mutants_that_flip
+
+
+ggsave(
+  filename=paste0(plot_directory, "2022-03-14-mutants-fip-env-figure.pdf"),
+  plot=fig_num_mutants_that_flip,
+  width=12,
+  height=4
+  # base_height=6
+  # base_asp=2
+)
 ```
 
 ### High mutation rate result in more robust genotypes
 
 ```{r}
 focal_mut_rates <- c(0.0001, 0.001, 0.01, 0.0316)
+limits<-c(0.2, 1.0)
 ```
 
 #### Viability
@@ -2657,10 +2878,11 @@ fig_prop_viable <-
     palette=cb_palette
   ) +
   scale_x_discrete(
-    name="Mutation rate",
+    name="Mutation rate"
   ) +
   scale_y_continuous(
     name="Proportion viable"
+    # limits=limits
   ) +
   facet_wrap(
     ~env_condition,
@@ -2680,7 +2902,7 @@ fig_prop_viable
 fig_phenotypic_profile_robustness <-
   ggplot(
     filter(
-      ls1_task_toggle_data,
+      ls2_task_toggle_data,
       (num_tasks_toggled==0) &
       COPY_MUT_PROB%in%focal_mut_rates & env_condition%in%focal_envs
     ),
@@ -2768,3 +2990,4 @@ ggsave(
   # base_asp=2
 )
 ```
+
