--- a/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut.Rmd
+++ b/experiments/2022-03-14-fixed-mut/analysis/2022-03-14-fixed-mut.Rmd
@@ -1355,4 +1355,818 @@ ggsave(
 )
 ```
 
+## Pairwise knockout data
+
+```{r}
+pw_ko_data_loc <- paste0(working_directory, "data/pairwise_knockouts_run_summary.csv")
+pw_ko_data <- read.csv(pw_ko_data_loc, na.strings="NONE")
+
+pw_ko_data$COPY_MUT_PROB <- as.factor(
+  pw_ko_data$COPY_MUT_PROB
+)
+pw_ko_data$env_chg_rate <- as.factor(
+  pw_ko_data$env_chg_rate
+)
+pw_ko_data$env_condition <- as.factor(
+  pw_ko_data$env_condition
+)
+pw_ko_data$env_type <- as.factor(
+  pw_ko_data$env_type
+)
+
+pw_ko_data$env_chg_rate_label <- mapply(
+  get_env_chg_rate_label,
+  pw_ko_data$env_chg_rate,
+  pw_ko_data$env_type
+)
+pw_ko_data$env_chg_rate_label <- factor(
+  pw_ko_data$env_chg_rate_label,
+  levels=c(
+    "none-a",
+    "none-b",
+    "30",
+    "300",
+    "3000"
+  )
+)
+pw_ko_data$env_type_label <- mapply(
+  get_env_type_label,
+  pw_ko_data$env_type
+)
+pw_ko_data$combined_env_type_label <- mapply(
+  get_combined_env_type_label,
+  pw_ko_data$env_type
+)
+
+pw_ko_data$redundant_sites_per_task <- pw_ko_data$num_redundant_task_sites / pw_ko_data$num_tasks_performed
+pw_ko_data$sites_per_task <- pw_ko_data$num_task_coding_sites / pw_ko_data$num_tasks_performed
+pw_ko_data$prop_multi_task_sites <- pw_ko_data$num_multi_task_sites / pw_ko_data$num_task_coding_sites
+
+pw_ko_longer <- pivot_longer(
+  pw_ko_data,
+  cols=c(
+    "num_and_task_coding_sites",
+    "num_andnot_task_coding_sites",
+    "num_nand_task_coding_sites",
+    "num_not_task_coding_sites",
+    "num_or_task_coding_sites",
+    "num_ornot_task_coding_sites"
+  ),
+  names_to="task_name",
+  values_to="num_sites"
+)
+```
+
+### num_redundant_viability_sites
+
+```{r}
+ggplot(
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_redundant_viability_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "num_redundant_viability_sites.pdf")
+)
+```
+
+### num_viability_sites
+
+```{r}
+ggplot(
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_viability_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "num_viability_sites.pdf")
+)
+```
+
+### num_task_recovery_sites
+
+```{r}
+ggplot(
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_task_recovery_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "num_task_recovery_sites.pdf")
+)
+```
+
+### num_redundant_task_sites
+
+```{r}
+ggplot(
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_redundant_task_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "num_redundant_task_sites.pdf")
+)
+```
+
+
+### num_nonredundant_task_sites
+
+```{r}
+ggplot(
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_nonredundant_task_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "num_nonredundant_task_sites.pdf")
+)
+```
+
+### num_task_coding_sites
+
+```{r}
+ggplot(
+    # filter(pw_ko_data,tasks_performed=="and;not;or"),
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=num_task_coding_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "num_task_coding_sites.pdf")
+)
+```
+
+### sites_per_task
+
+```{r}
+ggplot(
+    # filter(pw_ko_data,tasks_performed=="and;not;or"),
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=sites_per_task,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "sites_per_task.pdf")
+)
+```
+
+### prop_multi_task_sites
+
+```{r}
+ggplot(
+    # filter(pw_ko_data,tasks_performed=="and;not;or"),
+    pw_ko_data,
+    aes(
+      x=env_chg_rate_label,
+      y=prop_multi_task_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    combined_env_type_label~COPY_MUT_PROB,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "prop_multi_task_sites.pdf")
+)
+```
+
+### Number of sites for each task
+
+```{r}
+ggplot(
+    filter(
+      pw_ko_longer,
+      num_sites>0 &
+      COPY_MUT_PROB%in%focal_mut_rates & env_condition%in%focal_envs
+    ),
+    aes(
+      x=COPY_MUT_PROB,
+      y=num_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = .5,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  # scale_y_continuous(
+  #   trans=log10_trans()
+  # ) +
+  facet_grid(
+    task_name~env_condition,
+    scales="free_x"
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14),
+    axis.text.x=element_text(angle=45,hjust=1),
+    panel.border = element_rect(color = "grey", fill=NA, size=1.5)
+  )
+ggsave(
+  paste0(working_directory, "plots/", "pw_num_task_sites_by_task.pdf"),
+  height=20,
+  width=18
+)
+```
+
+## Manuscript figures
+
+```{r}
+focal_mut_rate <- 0.001
+focal_mut_rates <- c(0.0001, 0.001, 0.0316)
+focal_envs <- c(
+  "env-consta",
+  "env-constb",
+  "env-cycling_rate-300",
+  "env-random_rate-300"
+)
+env_breaks<-c("consta", "constb", "cycling", "random")
+env_labels<-c("Const-A", "Const-B", "Cyclic", "Random")
+
+env_facets <- c(
+  "env-consta"="Const-A",
+  "env-constb"="Const-B",
+  "env-cycling_rate-300"="Cyclic",
+  "env-random_rate-300"="Random"
+)
+env_facet_labeller <- function(variable, value) {
+  return(env_facets[value])
+}
+```
+
+### True replication rate
+
+```{r}
+# focal_mut_rates <- c(0.0001, 0.001, 0.0316)
+fig_replication_rate_ot <-
+  ggplot(
+    filter(
+      time_series_data,
+      # (update%%10000)==0&
+      COPY_MUT_PROB%in%focal_mut_rates & env_condition%in%focal_envs
+    ),
+    aes(
+      x=update,
+      y=avg_true_replication_rate,
+      fill=env_condition,
+      color=env_condition
+    )
+  ) +
+  stat_summary(geom="line", fun=mean) +
+  stat_summary(
+    geom="ribbon",
+    fun.data="mean_cl_boot",
+    fun.args=list(conf.int=0.95),
+    alpha=0.2,
+    linetype=0
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette,
+    name="Env:",
+    # breaks=env_breaks
+    # limits=env_breaks,
+    labels=env_labels
+  ) +
+  scale_color_brewer(
+    palette=cb_palette,
+    name="Env:",
+    # breaks=env_breaks,
+    # limits=env_breaks,
+    labels=env_labels
+  ) +
+  scale_y_continuous(
+    name="Reproduction rate"
+  ) +
+  scale_x_continuous(
+    name="Update",
+    breaks=c(0, 100000, 200000, 300000)
+  ) +
+  facet_grid(
+    ~COPY_MUT_PROB
+  ) +
+  theme(
+    legend.position="bottom",
+    axis.text.x=element_text(angle=45,hjust=1)
+  )
+# fig_replication_rate_ot
+ggsave(
+  filename=paste0(plot_directory, "2022-03-14-replication-rate-figure.pdf"),
+  plot=fig_replication_rate_ot,
+  width=12,
+  height=4
+)
+```
+
+### Robustness
+
+#### Number of redundant task sites
+
+```{r}
+fig_num_redundant_task_sites <-
+  ggplot(
+    filter(
+      pw_ko_data,
+      COPY_MUT_PROB%in%focal_mut_rates & env_condition%in%focal_envs
+    ),
+    aes(
+      x=COPY_MUT_PROB,
+      # y=num_redundant_task_sites,
+      y=redundant_sites_per_task,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = 1,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  scale_y_continuous(
+    name="Redundant sites per task"
+  ) +
+  scale_x_discrete(
+    name="Mutation rate"
+  ) +
+  facet_wrap(
+    ~env_condition,
+    nrow=1,
+    labeller=as_labeller(env_facets)
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14)
+  )
+fig_num_redundant_task_sites
+```
+
+#### Number of overlapping task sites
+
+```{r}
+fig_prop_multi_task_sites <-
+  ggplot(
+    filter(
+      pw_ko_data,
+      COPY_MUT_PROB%in%focal_mut_rates & env_condition%in%focal_envs
+    ),
+    aes(
+      x=COPY_MUT_PROB,
+      y=prop_multi_task_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = 1,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  scale_y_continuous(
+    name="Proportion shared task sites"
+  ) +
+  scale_x_discrete(
+    name="Mutation rate"
+  ) +
+  facet_wrap(
+    ~env_condition,
+    nrow=1,
+    labeller=as_labeller(env_facets)
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14)
+  )
+fig_prop_multi_task_sites
+```
+
+#### Number of task coding sites
+
+```{r}
+fig_num_task_coding_sites <-
+  ggplot(
+    filter(
+      pw_ko_data,
+      COPY_MUT_PROB%in%focal_mut_rates & env_condition%in%focal_envs
+    ),
+    aes(
+      x=COPY_MUT_PROB,
+      y=sites_per_task,
+      # y=num_task_coding_sites,
+      fill=env_condition
+    )
+  ) +
+  geom_flat_violin(
+    position = position_nudge(x = .2, y = 0),
+    alpha = .8,
+    adjust=1.5
+  ) +
+  geom_point(
+    mapping=aes(color=env_condition),
+    position = position_jitter(width = .15),
+    size = 1,
+    alpha = 0.8
+  ) +
+  geom_boxplot(
+    width = .1,
+    outlier.shape = NA,
+    alpha = 0.5
+  ) +
+  scale_fill_brewer(
+    palette=cb_palette
+  ) +
+  scale_color_brewer(
+    palette=cb_palette
+  ) +
+  scale_y_continuous(
+    name="Avg. sites per task"
+  ) +
+  scale_x_discrete(
+    name="Mutation rate"
+  ) +
+  facet_wrap(
+    ~env_condition,
+    nrow=1,
+    labeller=as_labeller(env_facets)
+  ) +
+  theme(
+    legend.position="none",
+    axis.text=element_text(size=14)
+  )
+fig_num_task_coding_sites
+```
+
+#### Combined
+
+```{r}
+
+ggsave(
+  filename=paste0(plot_directory, "2022-03-14-num-redundant-sites.pdf"),
+  plot=fig_num_redundant_task_sites,
+  width=12,
+  height=4
+)
+ggsave(
+  filename=paste0(plot_directory, "2022-03-14-prop-multi-task-sites.pdf"),
+  plot=fig_prop_multi_task_sites,
+  width=12,
+  height=4
+)
+ggsave(
+  filename=paste0(plot_directory, "2022-03-14-sites-per-task.pdf"),
+  plot=fig_num_task_coding_sites,
+  width=12,
+  height=4
+)
+
+
+```
+
 
